--- a/deploy/example/redis-database.yaml
+++ b/deploy/example/redis-database.yaml
@@ -1,7 +1,7 @@
 apiVersion: cloud.atomix.io/v1beta2
 kind: Database
 metadata:
-  name: redis-storage
+  name: redis-storage-node
 spec:
   clusters: 1
   template:
@@ -11,7 +11,7 @@ spec:
         group: storage.cloud.atomix.io
         version: v1beta1
         kind: RedisStorageClass
-        name: redis-storage
+        name: redis-storage-node
         namespace: default
 
 
